apps/immich/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`photos.${DOMAIN}`)
      kind: Rule
      services:
        - name: immich-server
          port: 2283
          namespace: immich
  tls: {}
